# OSandSPcourswork

./: CMakeLists.txt  Makefile  README.md  config.c  config.h  file_monitor  integrity.c  integrity.h  logger.c  logger.h  main.c  monitor.c  monitor.h  thread_manager.c  thread_manager.h
